Added missing files.

--- a/SpecflowTest/SpecflowTest.csproj
+++ b/SpecflowTest/SpecflowTest.csproj
@@ -90,6 +90,8 @@
     <Resource Include="Utilities\Logos\Header.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Content Include="Drivers\chromedriver.exe" />
+    <Content Include="Drivers\IEDriverServer.exe" />
     <Content Include="Utilities\ReportUI.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
